--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,20 @@
-*{background-color:rgba(255,0,0,0.2)}* *{background-color:rgba(0,255,0,0.2)}* * *{background-color:rgba(0,0,255,0.2)}* * * *{background-color:rgba(255,0,255,0.2)}* * * * *{background-color:rgba(0,255,255,0.2)}* * * * * *{background-color:rgba(255,255,0,0.2)}
+* {
+  background-color:rgba(255,0,0,0.2);
+}
+* * {
+  background-color:rgba(0,255,0,0.2);
+}
+* * * {
+  background-color:rgba(0,0,255,0.2);
+}
+* * * * {
+  background-color:rgba(255,0,255,0.2);
+}
+* * * * * { 
+  background-color:rgba(0,255,255,0.2);
+}
+* * * * * * {
+  background-color:rgba(255,255,0,0.2);
+}
+
+
